// Cartex - PostgreSQL e-commerce schema
// Paste this file's contents into https://dbdiagram.io

Enum order_status {
  pending
  confirmed
  shipped
  delivered
  cancelled
}

Table users {
  user_id    int      [pk, increment]
  name       varchar  [not null]
  email      varchar  [not null, unique]
  created_at timestamp [not null, default: `now()`]
}

Table categories {
  category_id         int     [pk, increment]
  name                varchar [not null]
  parent_category_id  int     [ref: > categories.category_id, note: 'self-referential for subcategories']
}

Table products {
  product_id  int       [pk, increment]
  name        varchar   [not null]
  description text
  price       decimal   [not null, note: 'CHECK price >= 0']
  stock       int       [not null, default: 0, note: 'CHECK stock >= 0']
  category_id int       [ref: > categories.category_id]
  created_at  timestamp [not null, default: `now()`]

  indexes {
    (name, description) [name: 'idx_products_fts', note: 'GIN full-text index']
    category_id          [name: 'idx_products_category_id']
  }
}

Table cart_items {
  cart_item_id int       [pk, increment]
  user_id      int       [not null, ref: > users.user_id]
  product_id   int       [not null, ref: > products.product_id]
  quantity     int       [not null, note: 'CHECK quantity > 0']
  added_at     timestamp [not null, default: `now()`]

  indexes {
    (user_id, product_id) [unique]
  }
}

Table orders {
  order_id         int          [pk, increment]
  user_id          int          [not null, ref: > users.user_id]
  status           order_status [not null, default: 'pending']
  shipping_address text         [not null]
  total_amount     decimal      [not null, default: 0]
  created_at       timestamp    [not null, default: `now()`]
  updated_at       timestamp    [not null, default: `now()`]

  indexes {
    user_id [name: 'idx_orders_user_id']
  }
}

Table order_items {
  order_item_id int     [pk, increment]
  order_id      int     [not null, ref: > orders.order_id]
  product_id    int     [not null, ref: > products.product_id]
  quantity      int     [not null, note: 'CHECK quantity > 0']
  unit_price    decimal [not null, note: 'snapshotted at order time, CHECK unit_price >= 0']

  indexes {
    order_id [name: 'idx_order_items_order_id']
  }
}

Table payments {
  payment_id int       [pk, increment]
  order_id   int       [not null, ref: > orders.order_id]
  amount     decimal   [not null]
  status     varchar   [not null, default: 'pending']
  paid_at    timestamp
  created_at timestamp [not null, default: `now()`]
}

Table audit_log {
  log_id     int       [pk, increment]
  table_name varchar   [not null]
  record_id  int
  action     varchar   [not null, note: 'INSERT / UPDATE / DELETE']
  old_value  json
  new_value  json
  changed_at timestamp [not null, default: `now()`]

  note: 'Populated by triggers: restore_stock_on_cancel, log_price_change, prevent_negative_stock'
}
